fixed padding on container

--- a/character.html
+++ b/character.html
@@ -27,12 +27,12 @@
     <header>
 
         <div class="logo">
-        <a href="#"><img class="img" src="./img/logo.png"></a>
+        <a href="index.html"><img class="img" src="./img/logo.png"></a>
         </div>
 
         <nav class="navbar navbar-expand-xxl bg-body-tertiary">
             <div class="container-fluid">
-              <a class="navbar-brand title" href="#"> Kaamel'O'tt </a>
+              <a class="navbar-brand title" href="index.html"> Kaamel'O'tt </a>
 
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
