--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kaamel'O'tt</title>
 
-    <!-- link bootstrap -->
+    <!-- link bootstrap & bootstrap icon -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     
@@ -27,12 +27,12 @@
       <header>
 
           <div class="logo">
-          <a href="#"><img class="img" src="./img/logo.png"></a>
+          <a href="index.html"><img class="img" src="./img/logo.png"></a>
           </div>
 
           <nav class="navbar navbar-expand-xxl bg-body-tertiary">
               <div class="container-fluid">
-                <a class="navbar-brand title" href="#"> Kaamel'O'tt </a>
+                <a class="navbar-brand title" href="index.html"> Kaamel'O'tt </a>
 
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item dropdown">
@@ -54,11 +54,11 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                      <a class="nav-link active" aria-current="page" href="#">Accueil</a>
+                      <a class="nav-link active" aria-current="page" href="index.html">Accueil</a>
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link " aria-current="page" href="#">Personnages</a>
+                      <a class="nav-link " aria-current="page" href="character.html">Personnages</a>
                     </li>
 
                     <li class="nav-item dropdown">
