--- a/character.html
+++ b/character.html
@@ -123,7 +123,7 @@
 
           <div class="col-lg-4">
 
-            <div class="text-center mb-lg-3">
+            <div class="text-center mb-lg-3 main__item--img">
             <img src="./img/arthur.jpg" alt="Arthur Pendragon" class="img-fluid">
             </div>
 
