--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </li>
 
                     <li class="nav-item">
-                      <a class="nav-link " aria-current="page" href="character.html">Personnages</a>
+                      <a class="nav-link " aria-current="page" href="characters.html">Personnages</a>
                     </li>
 
                     <li class="nav-item dropdown">
