copy img in a-source for working on the html-css integration

--- a/a-source/character.html
+++ b/a-source/character.html
@@ -17,7 +17,7 @@
 
 
     <!-- link css  -->
-    <link href="styles.css" rel="stylesheet">
+    <link href="../public/css/styles.css" rel="stylesheet">
 
 </head>
 
@@ -27,7 +27,7 @@
     <header>
 
         <div class="logo">
-        <a href="index.html"><img class="img" src="./img/logo.png"></a>
+        <a href="index.html"><img class="img" src="../public/img/logo.png"></a>
         </div>
 
         <nav class="navbar navbar-expand-xxl bg-body-tertiary">
@@ -37,7 +37,7 @@
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      <img src="./img/icone.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+                      <img src="../public/img/icone.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
                     User-a-nom-tres-long
                   </a>
                   <ul class="dropdown-menu">
