--- a/a-source/character.html
+++ b/a-source/character.html
@@ -17,7 +17,7 @@
 
 
     <!-- link css  -->
-    <link href="../public/css/styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
 
 </head>
 
