a-source integration of quotes page

--- a/a-source/index.html
+++ b/a-source/index.html
@@ -18,6 +18,7 @@
 
     <!-- link css  -->
     <link href="styles.css" rel="stylesheet">
+    <link rel="icon" href="img/other/favicon.png">
 
 </head>
 
@@ -66,7 +67,7 @@
                         Citations
                       </a>
                       <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" href="#">Liste générale</a></li>
+                        <li><a class="dropdown-item" href="quotes.html">Liste générale</a></li>
                         <li><a class="dropdown-item" href="#">Par livre</a></li>
                         <li><a class="dropdown-item" href="#">Par saison</a></li>
                       </ul>
